@@ -147,14 +147,43 @@
 			 *  \param[in,out] Data                Pointer to a location where the parameter data is stored for SET operations, or where
 			 *                                     the retrieved data is to be stored for GET operations.
 			 *
-			 *  \return Boolean true if the property get/set was successful, false otherwise
+			 *  \return Boolean \c true if the property GET/SET was successful, \c false otherwise
 			 */
 			bool CALLBACK_Audio_Device_GetSetEndpointProperty(USB_ClassInfo_Audio_Device_t* const AudioInterfaceInfo,
 			                                                  const uint8_t EndpointProperty,
 			                                                  const uint8_t EndpointAddress,
 			                                                  const uint8_t EndpointControl,
 			                                                  uint16_t* const DataLength,
-			                                                  uint8_t* Data);
+			                                                  uint8_t* Data) ATTR_NON_NULL_PTR_ARG(1);
+
+			/** Audio class driver callback for the setting and retrieval of streaming interface properties. This callback must be implemented
+			 *  in the user application to handle property manipulations on streaming audio interfaces.
+			 *
+			 *  When the DataLength parameter is NULL, this callback should only indicate whether the specified operation is valid for
+			 *  the given entity and should return as fast as possible. When non-NULL, this value may be altered for GET operations
+			 *  to indicate the size of the retreived data.
+			 *
+			 *  \note The length of the retrieved data stored into the Data buffer on GET operations should not exceed the initial value
+			 *        of the \c DataLength parameter.
+			 *
+			 *  \param[in,out] AudioInterfaceInfo  Pointer to a structure containing an Audio Class configuration and state.
+			 *  \param[in]     Property            Property of the interface to get or set, a value from \ref Audio_ClassRequests_t.
+			 *  \param[in]     EntityAddress       Address of the audio entity whose property is being referenced.
+			 *  \param[in]     Parameter           Parameter of the entity to get or set, specific to each type of entity (see USB Audio specification).
+			 *  \param[in,out] DataLength          For SET operations, the length of the parameter data to set. For GET operations, the maximum
+			 *                                     length of the retrieved data. When NULL, the function should return whether the given property
+			 *                                     and parameter is valid for the requested endpoint without reading or modifying the Data buffer.
+			 *  \param[in,out] Data                Pointer to a location where the parameter data is stored for SET operations, or where
+			 *                                     the retrieved data is to be stored for GET operations.
+			 *
+			 *  \return Boolean \c true if the property GET/SET was successful, \c false otherwise
+			 */
+			bool CALLBACK_Audio_Device_GetSetInterfaceProperty(USB_ClassInfo_Audio_Device_t* const AudioInterfaceInfo,
+			                                                   const uint8_t Property,
+			                                                   const uint8_t EntityAddress,
+			                                                   const uint16_t Parameter,
+			                                                   uint16_t* const DataLength,
+			                                                   uint8_t* Data) ATTR_NON_NULL_PTR_ARG(1);
 
 			/** Audio class driver event for an Audio Stream start/stop change. This event fires each time the device receives a stream enable or
 			 *  disable control request from the host, to start and stop the audio stream. The current state of the stream can be determined by the
